<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activity.MenuPrincipal">

    <TextView
        android:id="@+id/textView"
        android:layout_width="150dp"
        android:layout_height="39dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="164dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="358dp"
        android:layout_height="58dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/perfilcomportamentalbiologico"
        app:backgroundTint="#061A60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button3"
        android:layout_width="358dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:text="@string/testedefadiga"
        app:backgroundTint="#061A60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button4"
        android:layout_width="358dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:text="@string/jornada"
        app:backgroundTint="#061A60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button6"
        android:layout_width="358dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:text="@string/sonometro"
        app:backgroundTint="#061A60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button7"
        android:layout_width="358dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:text="@string/relatorios"
        app:backgroundTint="#061A60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button5"
        android:layout_width="358dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:text="@string/cpvt"
        app:backgroundTint="#061A60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />
</androidx.constraintlayout.widget.ConstraintLayout>